--- a/src/main/resources/admin/bower.json
+++ b/src/main/resources/admin/bower.json
@@ -18,9 +18,10 @@
     "tests"
   ],
   "dependencies": {
-    "semantic-ui": "~1.2.0",
+    "semantic-ui": "1.12.2",
     "angular": "~1.3.6",
     "angular-route": "~1.3.6",
-    "underscore": "*"
+    "underscore": "*",
+    "ng-file-upload": "~10.1.9"
   }
 }
